test/files/continuations-neg/lazy.check
lazy.scala:6: error: implementation restriction: cps annotations not allowed on lazy value definitions
    lazy val x = shift((k:Unit=>Unit)=>k())
             ^
one error found
